--- a/content/projects/unkey.mdx
+++ b/content/projects/unkey.mdx
@@ -1,13 +1,13 @@
 ---
-title: unkey.dev
-description: Unkey is an open source API Key management solution. It allows you to create, manage and validate API Keys for your users. It’s built with security and speed in mind.
+title: SPARK Social Media
+description: A Full Stack Social Media platform enabling seamless connections and interactive experiences with modern web technologies.
 date: "2023-07-01"
-url: https://unkey.dev
+url: https://xspark.vercel.app/
 published: true
-repository: chronark/unkey
+repository: Shanmukh025/Spark
 ---
 
 
-[![](https://unkey.dev/images/landing/app.png)](https://unkey.dev)
+[![](https://shanmukh25.vercel.app/_next/image?url=https%3A%2F%2Fimgur.com%2Fae1LOyl.gif&w=640&q=75)](https://shanmukh25.vercel.app/)
 
-Unkey is an open source API Key management solution. It allows you to create, manage and validate API Keys for your users. It’s built with security and speed in mind.
+Spark is a Full Stack Social Media platform enabling seamless connections and interactive experiences with modern web technologies.
