--- a/content/projects/highstorm.mdx
+++ b/content/projects/highstorm.mdx
@@ -1,26 +1,14 @@
 ---
-title: highstorm.app
-description: Simple, fast, open source custom event tracking
+title: SmartLists
+description: Smart, Simple and Fast To Do List Application.
 date: "2023-05-01"
-url: https://highstorm.app
+url: http://smartlist.pythonanywhere.com/
 published: true
-repository: "chronark/highstorm"
+repository: "Shanmukh025/smartlist"
   
 ---
 
 
- [![](https://highstorm.app/og.png)](https://highstorm.app) 
+ [![](https://shanmukh25.vercel.app/_next/image?url=https%3A%2F%2Fimgur.com%2FSP5MFdK.gif&w=640&q=75)](http://smartlist.pythonanywhere.com/) 
 
-Reduce the noise in your Slack workspace by consolidating all your event data into one place, filtering alerts by relevance, and customizing your alert settings to suit your needs.
-
-###### Consolidate Events
-Get all your event data in one place to reduce alert noise
-
-###### Stay Focused
-Keep your Slack workspace focused on what's important
-
-###### Customizable Settings
-Customize your alert settings to suit your unique needs
-
-###### Clear Overview
-Get a clear overview of all your alerts in one place
+A smart to-do list app to help you track tasks, set reminders, and boost your productivity.
