--- a/content/projects/planetfall.mdx
+++ b/content/projects/planetfall.mdx
@@ -4,7 +4,8 @@ description: My Developer Portfolio.
 date: "2023-04-01"
 url: https://shanmukh25.vercel.app/
 published: true
-  
+repository: "Shanmukh025/smartlist"
+
 ---
 
 
