--- a/content/projects/envshare.mdx
+++ b/content/projects/envshare.mdx
@@ -7,4 +7,4 @@ date: 2023-03-28
 published: true
 ---
 [![](https://shanmukh25.vercel.app/_next/image?url=https%3A%2F%2Fimgur.com%2FoM4SCYe.gif&w=640&q=75)](https://gdscklef.netlify.app/)
-A Real-Time Netflix Clone Using React JS.
+An Official GDSC KL University Website.
