--- a/content/projects/chronark.com.mdx
+++ b/content/projects/chronark.com.mdx
@@ -4,6 +4,8 @@ description: Netflix Clone using React.
 repository: Shanmukh025/Netflix
 url: https://net-flixclone.surge.sh/
 published: true
+date: "2023-07-01"
+
 ---
 [![](https://shanmukh25.vercel.app/_next/image?url=https%3A%2F%2Fimgur.com%2FsPFSEq4.gif&w=640&q=75)](https://shanmukh25.vercel.app/)
 A Real-Time Netflix Clone Using React JS.
