--- a/content/projects/envshare.mdx
+++ b/content/projects/envshare.mdx
@@ -4,6 +4,8 @@ description: Official GDSC KLEF Website.
 repository: Shanmukh025/GDSCWebsite
 url: https://gdscklef.netlify.app/
 published: true
+date: "2023-07-01"
+
 ---
 [![](https://shanmukh25.vercel.app/_next/image?url=https%3A%2F%2Fimgur.com%2FoM4SCYe.gif&w=640&q=75)](https://gdscklef.netlify.app/)
 An Official GDSC KL University Website.
