--- a/content/projects/highstorm.mdx
+++ b/content/projects/highstorm.mdx
@@ -4,7 +4,8 @@ description: Smart, Simple and Fast To Do List Application.
 url: http://smartlist.pythonanywhere.com/
 published: true
 repository: "Shanmukh025/smartlist"
-  
+date: "2023-07-01"
+
 ---
 
 
