--- a/content/projects/planetfall.mdx
+++ b/content/projects/planetfall.mdx
@@ -4,6 +4,7 @@ description: My Developer Portfolio.
 url: https://shanmukh25.vercel.app/
 published: true
 repository: "Shanmukh025/smartlist"
+date: "2023-07-01"
 
 ---
 
